--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-asn1crypto>=1.5.1
-bitarray
-pycryptodomex
+annotated-types==0.7.0
+asn1crypto==1.5.1
+bitarray==2.9.2
+pycryptodomex==3.20.0
+typing_extensions==4.12.2
